# qvc_dataengineering

./: Interview_tasks.docx  README.md  pyproject.toml  setup.sql  transactions.csv
article_transaction/: .part-00000-3dabd8b1-3789-4c23-8f14-9b9cd51de878-c000.snappy.parquet.crc  .part-00000-d8a155f7-bb84-46c8-a112-40c2433bf32c-c000.snappy.parquet.crc  part-00000-3dabd8b1-3789-4c23-8f14-9b9cd51de878-c000.snappy.parquet  part-00000-d8a155f7-bb84-46c8-a112-40c2433bf32c-c000.snappy.parquet
missing_articles/: .part-00000-9e77a5ac-e898-4d30-a2e8-0bb45efc82a5-c000.snappy.parquet.crc  part-00000-9e77a5ac-e898-4d30-a2e8-0bb45efc82a5-c000.snappy.parquet
solution/: cpu_benchmark.py  dict_challenge.py  pyspark_challenge.ipynb  pyspark_solution.ipynb  python_challenge.py  python_solution.py  rough.py  rough2.py  solution.sql  sql_solution.sql
