[tool.poetry]
name = "qvc-dataengineering"
version = "0.1.0"
description = ""
authors = ["abhiiiiiiijit <abhijitjan22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
